[Rahul] Swagger and rediscache is added
